@@ -25,6 +25,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -46,7 +48,6 @@ test {
             }
         }
     }
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
     reports {
         junitXml.required = false
     }
